--- a/src/v/BUILD
+++ b/src/v/BUILD
@@ -5,6 +5,7 @@ cc_library(
     hdrs = [
         "version.h",
         "outcome_future_utils.h",
+        "vformat.h",
     ],
     include_prefix = "version",
     visibility = ["//visibility:public"],
