--- a/src/v/cluster/BUILD
+++ b/src/v/cluster/BUILD
@@ -369,6 +369,10 @@ cc_library(
         "cloud_metadata/producer_id_recovery_manager.h",
         "cloud_metadata/types.h",
         "cloud_metadata/uploader.h",
+        "self_test/cloudcheck.h",
+        "self_test/diskcheck.h",
+        "self_test/metrics.h",
+        "self_test/netcheck.h",
         "node/local_monitor.h",
         "node/types.h",
         "migrations/tx_manager_migrator.h",
@@ -394,5 +398,13 @@ cc_library(
         "@seastar//:libseastar",
         "//src/v/model",
         "//src/v/cloud_storage",
+        "//src/v/kafka/protocol",
+        "//src/v/pandaproxy:schema_registry_config",
+        "//src/v/security",
+        "//src/v/kafka:types",
+        "//src/v/v8_engine",
+        ":features",
+        "//src/v:version",
+        "//src/v/utils",
     ],
 )
