--- a/src/v/pandaproxy/BUILD
+++ b/src/v/pandaproxy/BUILD
@@ -2,6 +2,7 @@ cc_library(
     name = "schema_registry_config",
     hdrs = [
         "schema_registry/schema_id_validation.h",
+        "schema_registry/subject_name_strategy.h",
     ],
     include_prefix = "pandaproxy",
     visibility = ["//visibility:public"],
