--- a/src/v/kafka/BUILD
+++ b/src/v/kafka/BUILD
@@ -1,7 +1,10 @@
 cc_library(
     name = "types",
     hdrs = [
-        "types.h"
+        "types.h",
+        "group_probe.h",
+        "latency_probe.h",
+        "sasl_probe.h",
     ],
     include_prefix = "kafka",
     visibility = ["//visibility:public"],
