--- a/src/v/kafka/protocol/BUILD
+++ b/src/v/kafka/protocol/BUILD
@@ -198,7 +198,6 @@ cc_library(
         "protocol.cc",
     ],
     hdrs = [
-        "types.h",
         "wire.h",
         "batch_reader.h",
         "kafka_batch_adapter.h",
@@ -206,6 +205,53 @@ cc_library(
         "errors.h",
         "exceptions.h",
         "legacy_message.h",
+        "alter_client_quotas.h",
+        "find_coordinator.h",
+        "add_offsets_to_txn.h",
+        "add_partitions_to_txn.h",
+        "alter_configs.h",
+        "alter_partition_reassignments.h",
+        "api_versions.h",
+        "batch_consumer.h",
+        "create_acls.h",
+        "create_partitions.h",
+        "create_topics.h",
+        "delete_acls.h",
+        "delete_groups.h",
+        "delete_records.h",
+        "delete_topics.h",
+        "describe_acls.h",
+        "describe_client_quotas.h",
+        "describe_configs.h",
+        "describe_groups.h",
+        "describe_log_dirs.h",
+        "describe_producers.h",
+        "describe_transactions.h",
+        "end_txn.h",
+        "fetch.h",
+        "flex_versions.h",
+        "fwd.h",
+        "heartbeat.h",
+        "incremental_alter_configs.h",
+        "init_producer_id.h",
+        "join_group.h",
+        "leave_group.h",
+        "list_groups.h",
+        "list_offsets.h",
+        "list_partition_reassignments.h",
+        "list_transactions.h",
+        "metadata.h",
+        "offset_commit.h",
+        "offset_delete.h",
+        "offset_fetch.h",
+        "offset_for_leader_epoch.h",
+        "produce.h",
+        "sasl_authenticate.h",
+        "sasl_handshake.h",
+        "sync_group.h",
+        "timeout.h",
+        "txn_offset_commit.h",
+        "types.h",
         "schemata/api_versions_request.h",
         "schemata/api_versions_response.h",
         "schemata/offset_fetch_request.h",
