--- a/src/v/pandaproxy/BUILD
+++ b/src/v/pandaproxy/BUILD
@@ -7,3 +7,14 @@ cc_library(
     include_prefix = "pandaproxy",
     visibility = ["//visibility:public"],
 )
+
+cc_library(
+    name = "schema_registry_interface",
+    hdrs = [
+        "schema_registry/fwd.h",
+        "schema_registry/api.h",
+        "schema_registry/validation.h",
+    ],
+    include_prefix = "pandaproxy",
+    visibility = ["//visibility:public"],
+)
