--- a/src/v/security/BUILD
+++ b/src/v/security/BUILD
@@ -49,8 +49,23 @@ cc_library(
         "scram_authenticator.h",
         "sasl_authentication.h",
         "audit/schemas/types.h",
+        "audit/schemas/application_activity.h",
+        "audit/schemas/hashing_utils.h",
+        "audit/schemas/iam.h",
+        "audit/schemas/schemas.h",
+        "audit/schemas/utils.h",
+        "audit/audit_log_manager.h",
+        "audit/client_probe.h",
+        "audit/logger.h",
+        "audit/probe.h",
+        "audit/types.h",
         "exceptions.h",
         "errc.h",
+        "mtls.h",
+        "request_auth.h",
+        "krb5_configurator.h",
+        "gssapi_authenticator.h",
+        "oidc_authenticator.h",
     ],
     include_prefix = "security",
     visibility = ["//visibility:public"],
@@ -58,6 +73,7 @@ cc_library(
         "//src/v/base",
         "//src/v/serde",
         "//src/v/json",
+        "//src/v/kafka/client",
         "//src/v/bytes:bytes_random",
     ]
 )
