--- a/src/v/cluster/BUILD
+++ b/src/v/cluster/BUILD
@@ -1,17 +1,76 @@
 load("//src/v/rpc:compiler.bzl", "rpc_gen")
 
-rpc_gen("bootstrap_rpc", src="cluster_bootstrap.json", out="cluster_bootstrap_service.h")
-rpc_gen("controller_rpc", src="controller.json", out="controller_service.h")
-rpc_gen("metadata_rpc", src="metadata_dissemination_rpc.json", out="metadata_dissemination_rpc_service.h")
-rpc_gen("id_allocator_rpc", src="id_allocator.json", out="id_allocator_service.h")
-rpc_gen("tx_gateway_rpc", src="tx_gateway.json", out="tx_gateway_service.h")
-rpc_gen("partition_balancer_rpc", src="partition_balancer_rpc.json", out="partition_balancer_rpc_service.h")
-rpc_gen("node_status_rpc", src="node_status_rpc.json", out="node_status_rpc_service.h")
-rpc_gen("ephemeral_credential_rpc", src="ephemeral_credential_rpc.json", out="ephemeral_credential_rpc_service.h")
-rpc_gen("self_test_rpc", src="self_test_rpc.json", out="self_test_rpc_service.h")
-rpc_gen("topic_recovery_status_rpc", src="topic_recovery_status_rpc.json", out="topic_recovery_status_rpc_service.h")
-rpc_gen("offsets_recovery_rpc", src="offsets_recovery_rpc.json", out="offsets_recovery_rpc_service.h")
-rpc_gen("tx_manager_migrator_rpc", src="migrations/tx_manager_migrator.json", out="tx_manager_migrator_service.h")
+rpc_gen(
+    "bootstrap_rpc",
+    src = "cluster_bootstrap.json",
+    out = "cluster_bootstrap_service.h",
+)
+
+rpc_gen(
+    "controller_rpc",
+    src = "controller.json",
+    out = "controller_service.h",
+)
+
+rpc_gen(
+    "metadata_rpc",
+    src = "metadata_dissemination_rpc.json",
+    out = "metadata_dissemination_rpc_service.h",
+)
+
+rpc_gen(
+    "id_allocator_rpc",
+    src = "id_allocator.json",
+    out = "id_allocator_service.h",
+)
+
+rpc_gen(
+    "tx_gateway_rpc",
+    src = "tx_gateway.json",
+    out = "tx_gateway_service.h",
+)
+
+rpc_gen(
+    "partition_balancer_rpc",
+    src = "partition_balancer_rpc.json",
+    out = "partition_balancer_rpc_service.h",
+)
+
+rpc_gen(
+    "node_status_rpc",
+    src = "node_status_rpc.json",
+    out = "node_status_rpc_service.h",
+)
+
+rpc_gen(
+    "ephemeral_credential_rpc",
+    src = "ephemeral_credential_rpc.json",
+    out = "ephemeral_credential_rpc_service.h",
+)
+
+rpc_gen(
+    "self_test_rpc",
+    src = "self_test_rpc.json",
+    out = "self_test_rpc_service.h",
+)
+
+rpc_gen(
+    "topic_recovery_status_rpc",
+    src = "topic_recovery_status_rpc.json",
+    out = "topic_recovery_status_rpc_service.h",
+)
+
+rpc_gen(
+    "offsets_recovery_rpc",
+    src = "offsets_recovery_rpc.json",
+    out = "offsets_recovery_rpc_service.h",
+)
+
+rpc_gen(
+    "tx_manager_migrator_rpc",
+    src = "migrations/tx_manager_migrator.json",
+    out = "tx_manager_migrator_service.h",
+)
 
 cc_library(
     name = "version",
@@ -21,8 +80,8 @@ cc_library(
     include_prefix = "cluster",
     visibility = ["//visibility:public"],
     deps = [
-        "//src/v/utils",
         "//src/v/model",
+        "//src/v/utils",
     ],
 )
 
@@ -57,8 +116,8 @@ cc_library(
     include_prefix = "cluster",
     visibility = ["//visibility:public"],
     deps = [
-        "//src/v/utils",
         "//src/v/model",
+        "//src/v/utils",
     ],
 )
 
@@ -221,134 +280,9 @@ cc_library(
         "archival/types.h",
         "archival/upload_controller.h",
         "archival/upload_housekeeping_service.h",
-        "scheduling/allocation_node.h",
-        "scheduling/allocation_state.h",
-        "scheduling/allocation_strategy.h",
-        "scheduling/constraints.h",
-        "scheduling/leader_balancer.h",
-        "scheduling/leader_balancer_constraints.h",
-        "scheduling/leader_balancer_greedy.h",
-        "scheduling/leader_balancer_probe.h",
-        "scheduling/leader_balancer_random.h",
-        "scheduling/leader_balancer_strategy.h",
-        "scheduling/leader_balancer_types.h",
-        "scheduling/partition_allocator.h",
-        "scheduling/types.h",
         "bootstrap_backend.h",
         "bootstrap_service.h",
         "bootstrap_types.h",
-        "cloud_storage_size_reducer.h",
-        "cluster_discovery.h",
-        "cluster_recovery_manager.h",
-        "cluster_recovery_reconciler.h",
-        "cluster_recovery_state.h",
-        "cluster_recovery_table.h",
-        "cluster_utils.h",
-        "cluster_uuid.h",
-        "commands.h",
-        "config_frontend.h",
-        "config_manager.h",
-        "controller.h",
-        "controller_api.h",
-        "controller_backend.h",
-        "controller_log_limiter.h",
-        "controller_probe.h",
-        "controller_snapshot.h",
-        "controller_stm.h",
-        "distributed_kv_stm.h",
-        "distributed_kv_stm_types.h",
-        "drain_manager.h",
-        "ephemeral_credential_frontend.h",
-        "ephemeral_credential_serde.h",
-        "ephemeral_credential_service.h",
-        "errc.h",
-        "feature_backend.h",
-        "feature_barrier.h",
-        "feature_manager.h",
-        "fwd.h",
-        "health_manager.h",
-        "health_monitor_backend.h",
-        "health_monitor_frontend.h",
-        "health_monitor_types.h",
-        "id_allocator.h",
-        "id_allocator_frontend.h",
-        "id_allocator_stm.h",
-        "leader_router.h",
-        "log_eviction_stm.h",
-        "logger.h",
-        "members_backend.h",
-        "members_frontend.h",
-        "members_manager.h",
-        "members_table.h",
-        "metadata_cache.h",
-        "metadata_dissemination_handler.h",
-        "metadata_dissemination_service.h",
-        "metadata_dissemination_types.h",
-        "metrics_reporter.h",
-        "namespaced_cache.h",
-        "node_isolation_watcher.h",
-        "node_status_backend.h",
-        "node_status_rpc_handler.h",
-        "node_status_rpc_types.h",
-        "node_status_table.h",
-        "notification_latch.h",
-        "ntp_callbacks.h",
-        "partition.h",
-        "partition_balancer_backend.h",
-        "partition_balancer_planner.h",
-        "partition_balancer_rpc_handler.h",
-        "partition_balancer_state.h",
-        "partition_balancer_types.h",
-        "partition_leaders_table.h",
-        "partition_manager.h",
-        "partition_probe.h",
-        "partition_recovery_manager.h",
-        "plugin_backend.h",
-        "plugin_frontend.h",
-        "plugin_table.h",
-        "prefix_truncate_record.h",
-        "producer_state.h",
-        "producer_state_manager.h",
-        "raft0_utils.h",
-        "remote_topic_configuration_source.h",
-        "rm_group_proxy.h",
-        "rm_partition_frontend.h",
-        "rm_stm.h",
-        "rm_stm_types.h",
-        "security_frontend.h",
-        "security_manager.h",
-        "self_test_backend.h",
-        "self_test_frontend.h",
-        "self_test_rpc_handler.h",
-        "self_test_rpc_types.h",
-        "service.h",
-        "shard_balancer.h",
-        "shard_placement_table.h",
-        "shard_table.h",
-        "simple_batch_builder.h",
-        "state_machine_registry.h",
-        "tm_stm.h",
-        "tm_stm_cache.h",
-        "tm_stm_cache_manager.h",
-        "topic_recovery_service.h",
-        "topic_recovery_status_frontend.h",
-        "topic_recovery_status_rpc_handler.h",
-        "topic_recovery_status_types.h",
-        "topic_recovery_validator.h",
-        "topic_table.h",
-        "topic_table_partition_generator.h",
-        "topic_table_probe.h",
-        "topic_updates_dispatcher.h",
-        "topic_validators.h",
-        "topics_frontend.h",
-        "tx_coordinator_mapper.h",
-        "tx_gateway.h",
-        "tx_gateway_frontend.h",
-        "tx_hash_ranges.h",
-        "tx_helpers.h",
-        "tx_topic_manager.h",
-        "tx_utils.h",
-        "types.h",
         "cloud_metadata/cluster_manifest.h",
         "cloud_metadata/cluster_recovery_backend.h",
         "cloud_metadata/error_outcome.h",
@@ -369,42 +303,167 @@ cc_library(
         "cloud_metadata/producer_id_recovery_manager.h",
         "cloud_metadata/types.h",
         "cloud_metadata/uploader.h",
+        "cloud_storage_size_reducer.h",
+        "cluster_bootstrap_service.h",
+        "cluster_discovery.h",
+        "cluster_recovery_manager.h",
+        "cluster_recovery_reconciler.h",
+        "cluster_recovery_state.h",
+        "cluster_recovery_table.h",
+        "cluster_utils.h",
+        "cluster_uuid.h",
+        "commands.h",
+        "config_frontend.h",
+        "config_manager.h",
+        "controller.h",
+        "controller_api.h",
+        "controller_backend.h",
+        "controller_log_limiter.h",
+        "controller_probe.h",
+        "controller_service.h",
+        "controller_snapshot.h",
+        "controller_stm.h",
+        "distributed_kv_stm.h",
+        "distributed_kv_stm_types.h",
+        "drain_manager.h",
+        "ephemeral_credential_frontend.h",
+        "ephemeral_credential_rpc_service.h",
+        "ephemeral_credential_serde.h",
+        "ephemeral_credential_service.h",
+        "errc.h",
+        "feature_backend.h",
+        "feature_barrier.h",
+        "feature_manager.h",
+        "fwd.h",
+        "health_manager.h",
+        "health_monitor_backend.h",
+        "health_monitor_frontend.h",
+        "health_monitor_types.h",
+        "id_allocator.h",
+        "id_allocator_frontend.h",
+        "id_allocator_service.h",
+        "id_allocator_stm.h",
+        "leader_router.h",
+        "log_eviction_stm.h",
+        "logger.h",
+        "members_backend.h",
+        "members_frontend.h",
+        "members_manager.h",
+        "members_table.h",
+        "metadata_cache.h",
+        "metadata_dissemination_handler.h",
+        "metadata_dissemination_rpc_service.h",
+        "metadata_dissemination_service.h",
+        "metadata_dissemination_types.h",
+        "metrics_reporter.h",
+        "migrations/tx_manager_migrator.h",
+        "migrations/tx_manager_migrator_handler.h",
+        "migrations/tx_manager_migrator_types.h",
+        "namespaced_cache.h",
+        "node/local_monitor.h",
+        "node/types.h",
+        "node_isolation_watcher.h",
+        "node_status_backend.h",
+        "node_status_rpc_handler.h",
+        "node_status_rpc_service.h",
+        "node_status_rpc_types.h",
+        "node_status_table.h",
+        "notification_latch.h",
+        "ntp_callbacks.h",
+        "offsets_recovery_rpc_service.h",
+        "partition.h",
+        "partition_balancer_backend.h",
+        "partition_balancer_planner.h",
+        "partition_balancer_rpc_handler.h",
+        "partition_balancer_rpc_service.h",
+        "partition_balancer_state.h",
+        "partition_balancer_types.h",
+        "partition_leaders_table.h",
+        "partition_manager.h",
+        "partition_probe.h",
+        "partition_recovery_manager.h",
+        "plugin_backend.h",
+        "plugin_frontend.h",
+        "plugin_table.h",
+        "prefix_truncate_record.h",
+        "producer_state.h",
+        "producer_state_manager.h",
+        "raft0_utils.h",
+        "remote_topic_configuration_source.h",
+        "rm_group_proxy.h",
+        "rm_partition_frontend.h",
+        "rm_stm.h",
+        "rm_stm_types.h",
+        "scheduling/allocation_node.h",
+        "scheduling/allocation_state.h",
+        "scheduling/allocation_strategy.h",
+        "scheduling/constraints.h",
+        "scheduling/leader_balancer.h",
+        "scheduling/leader_balancer_constraints.h",
+        "scheduling/leader_balancer_greedy.h",
+        "scheduling/leader_balancer_probe.h",
+        "scheduling/leader_balancer_random.h",
+        "scheduling/leader_balancer_strategy.h",
+        "scheduling/leader_balancer_types.h",
+        "scheduling/partition_allocator.h",
+        "scheduling/types.h",
+        "security_frontend.h",
+        "security_manager.h",
         "self_test/cloudcheck.h",
         "self_test/diskcheck.h",
         "self_test/metrics.h",
         "self_test/netcheck.h",
-        "node/local_monitor.h",
-        "node/types.h",
-        "migrations/tx_manager_migrator.h",
-        "migrations/tx_manager_migrator_handler.h",
-        "migrations/tx_manager_migrator_types.h",
-        "cluster_bootstrap_service.h",
-        "controller_service.h",
-        "metadata_dissemination_rpc_service.h",
-        "id_allocator_service.h",
-        "tx_gateway_service.h",
-        "partition_balancer_rpc_service.h",
-        "node_status_rpc_service.h",
-        "ephemeral_credential_rpc_service.h",
+        "self_test_backend.h",
+        "self_test_frontend.h",
+        "self_test_rpc_handler.h",
         "self_test_rpc_service.h",
+        "self_test_rpc_types.h",
+        "service.h",
+        "shard_balancer.h",
+        "shard_placement_table.h",
+        "shard_table.h",
+        "simple_batch_builder.h",
+        "state_machine_registry.h",
+        "tm_stm.h",
+        "tm_stm_cache.h",
+        "tm_stm_cache_manager.h",
+        "topic_recovery_service.h",
+        "topic_recovery_status_frontend.h",
+        "topic_recovery_status_rpc_handler.h",
         "topic_recovery_status_rpc_service.h",
-        "offsets_recovery_rpc_service.h",
+        "topic_recovery_status_types.h",
+        "topic_recovery_validator.h",
+        "topic_table.h",
+        "topic_table_partition_generator.h",
+        "topic_table_probe.h",
+        "topic_updates_dispatcher.h",
+        "topic_validators.h",
+        "topics_frontend.h",
+        "tx_coordinator_mapper.h",
+        "tx_gateway.h",
+        "tx_gateway_frontend.h",
+        "tx_gateway_service.h",
+        "tx_hash_ranges.h",
+        "tx_helpers.h",
         "tx_manager_migrator_service.h",
+        "tx_topic_manager.h",
+        "tx_utils.h",
+        "types.h",
     ],
     include_prefix = "cluster",
     visibility = ["//visibility:public"],
     deps = [
-        "//src/v/base",
-        "@seastar//:libseastar",
-        "//src/v/model",
-        "//src/v/cloud_storage",
-        "//src/v/kafka/protocol",
-        "//src/v/pandaproxy:schema_registry_config",
-        "//src/v/security",
-        "//src/v/kafka:types",
-        "//src/v/v8_engine",
         ":features",
         "//src/v:version",
+        "//src/v/base",
+        "//src/v/cloud_storage",
+        "//src/v/kafka:types",
+        "//src/v/kafka/protocol",
+        "//src/v/model",
+        "//src/v/pandaproxy:schema_registry_config",
+        "//src/v/security",
         "//src/v/utils",
+        "//src/v/v8_engine",
+        "@seastar//:libseastar",
     ],
 )
