--- a/src/v/kafka/protocol/BUILD
+++ b/src/v/kafka/protocol/BUILD
@@ -76,7 +76,7 @@ genrule(
         "schemata/fetch_request.json",
         "schemata/fetch_response.json",
         "schemata/end_txn_request.json",
-        "schemata/end_txn_response.json",  
+        "schemata/end_txn_response.json",
         "schemata/create_partitions_request.json",
         "schemata/create_partitions_response.json",
         "schemata/add_offsets_to_txn_request.json",
@@ -162,7 +162,7 @@ genrule(
         "schemata/fetch_request.h",
         "schemata/fetch_response.h",
         "schemata/end_txn_request.h",
-        "schemata/end_txn_response.h",  
+        "schemata/end_txn_response.h",
         "schemata/create_partitions_request.h",
         "schemata/create_partitions_response.h",
         "schemata/add_offsets_to_txn_request.h",
@@ -184,35 +184,28 @@ genrule(
         "protocol.cc",
     ],
     cmd = "$(location :generator) $(SRCS) $(OUTS)",
-    tools = [":generator"])
-
+    tools = [":generator"],
+)
 
 cc_library(
     name = "protocol",
     srcs = [
-        "errors.cc",
-        "logger.cc",
-        "types.cc",
         "batch_reader.cc",
+        "errors.cc",
         "kafka_batch_adapter.cc",
+        "logger.cc",
         "protocol.cc",
+        "types.cc",
     ],
     hdrs = [
-        "wire.h",
-        "batch_reader.h",
-        "kafka_batch_adapter.h",
-        "logger.h",
-        "errors.h",
-        "exceptions.h",
-        "legacy_message.h",
-        "alter_client_quotas.h",
-        "find_coordinator.h",
         "add_offsets_to_txn.h",
         "add_partitions_to_txn.h",
+        "alter_client_quotas.h",
         "alter_configs.h",
         "alter_partition_reassignments.h",
         "api_versions.h",
         "batch_consumer.h",
+        "batch_reader.h",
         "create_acls.h",
         "create_partitions.h",
         "create_topics.h",
@@ -228,18 +221,24 @@ cc_library(
         "describe_producers.h",
         "describe_transactions.h",
         "end_txn.h",
+        "errors.h",
+        "exceptions.h",
         "fetch.h",
+        "find_coordinator.h",
         "flex_versions.h",
         "fwd.h",
         "heartbeat.h",
         "incremental_alter_configs.h",
         "init_producer_id.h",
         "join_group.h",
+        "kafka_batch_adapter.h",
         "leave_group.h",
+        "legacy_message.h",
         "list_groups.h",
         "list_offsets.h",
         "list_partition_reassignments.h",
         "list_transactions.h",
+        "logger.h",
         "metadata.h",
         "offset_commit.h",
         "offset_delete.h",
@@ -248,105 +247,106 @@ cc_library(
         "produce.h",
         "sasl_authenticate.h",
         "sasl_handshake.h",
-        "sync_group.h",
-        "timeout.h",
-        "txn_offset_commit.h",
-        "types.h",
-        "schemata/api_versions_request.h",
-        "schemata/api_versions_response.h",
-        "schemata/offset_fetch_request.h",
-        "schemata/offset_fetch_response.h",
-        "schemata/offset_commit_request.h",
-        "schemata/offset_commit_response.h",
-        "schemata/join_group_request.h",
-        "schemata/join_group_response.h",
-        "schemata/sync_group_request.h",
-        "schemata/sync_group_response.h",
-        "schemata/heartbeat_request.h",
-        "schemata/heartbeat_response.h",
-        "schemata/leave_group_request.h",
-        "schemata/leave_group_response.h",
-        "schemata/delete_topics_request.h",
-        "schemata/delete_topics_response.h",
-        "schemata/describe_configs_request.h",
-        "schemata/describe_configs_response.h",
-        "schemata/find_coordinator_request.h",
-        "schemata/find_coordinator_response.h",
-        "schemata/list_offset_request.h",
-        "schemata/list_offset_response.h",
-        "schemata/list_transactions_request.h",
-        "schemata/list_transactions_response.h",
+        "schemata/add_offsets_to_txn_request.h",
+        "schemata/add_offsets_to_txn_response.h",
+        "schemata/add_partitions_to_txn_request.h",
+        "schemata/add_partitions_to_txn_response.h",
+        "schemata/alter_client_quotas_request.h",
+        "schemata/alter_client_quotas_response.h",
         "schemata/alter_configs_request.h",
         "schemata/alter_configs_response.h",
-        "schemata/list_groups_request.h",
-        "schemata/list_groups_response.h",
-        "schemata/describe_groups_request.h",
-        "schemata/describe_groups_response.h",
+        "schemata/alter_partition_reassignments_request.h",
+        "schemata/alter_partition_reassignments_response.h",
+        "schemata/api_versions_request.h",
+        "schemata/api_versions_response.h",
+        "schemata/create_acls_request.h",
+        "schemata/create_acls_response.h",
+        "schemata/create_partitions_request.h",
+        "schemata/create_partitions_response.h",
         "schemata/create_topics_request.h",
         "schemata/create_topics_response.h",
-        "schemata/sasl_handshake_request.h",
-        "schemata/sasl_handshake_response.h",
-        "schemata/sasl_authenticate_request.h",
-        "schemata/sasl_authenticate_response.h",
-        "schemata/init_producer_id_request.h",
-        "schemata/init_producer_id_response.h",
-        "schemata/incremental_alter_configs_request.h",
-        "schemata/incremental_alter_configs_response.h",
+        "schemata/delete_acls_request.h",
+        "schemata/delete_acls_response.h",
         "schemata/delete_groups_request.h",
         "schemata/delete_groups_response.h",
+        "schemata/delete_records_request.h",
+        "schemata/delete_records_response.h",
+        "schemata/delete_topics_request.h",
+        "schemata/delete_topics_response.h",
         "schemata/describe_acls_request.h",
         "schemata/describe_acls_response.h",
+        "schemata/describe_client_quotas_request.h",
+        "schemata/describe_client_quotas_response.h",
+        "schemata/describe_configs_request.h",
+        "schemata/describe_configs_response.h",
+        "schemata/describe_groups_request.h",
+        "schemata/describe_groups_response.h",
         "schemata/describe_log_dirs_request.h",
         "schemata/describe_log_dirs_response.h",
         "schemata/describe_producers_request.h",
         "schemata/describe_producers_response.h",
         "schemata/describe_transactions_request.h",
         "schemata/describe_transactions_response.h",
-        "schemata/create_acls_request.h",
-        "schemata/create_acls_response.h",
-        "schemata/delete_acls_request.h",
-        "schemata/delete_acls_response.h",
-        "schemata/produce_request.h",
-        "schemata/produce_response.h",
-        "schemata/metadata_request.h",
-        "schemata/metadata_response.h",
-        "schemata/add_partitions_to_txn_request.h",
-        "schemata/add_partitions_to_txn_response.h",
-        "schemata/txn_offset_commit_request.h",
-        "schemata/txn_offset_commit_response.h",
+        "schemata/end_txn_request.h",
+        "schemata/end_txn_response.h",
         "schemata/fetch_request.h",
         "schemata/fetch_response.h",
-        "schemata/end_txn_request.h",
-        "schemata/end_txn_response.h",  
-        "schemata/create_partitions_request.h",
-        "schemata/create_partitions_response.h",
-        "schemata/add_offsets_to_txn_request.h",
-        "schemata/add_offsets_to_txn_response.h",
-        "schemata/offset_delete_request.h",
-        "schemata/offset_delete_response.h",
-        "schemata/delete_records_request.h",
-        "schemata/delete_records_response.h",
-        "schemata/offset_for_leader_epoch_request.h",
-        "schemata/offset_for_leader_epoch_response.h",
-        "schemata/alter_partition_reassignments_request.h",
-        "schemata/alter_partition_reassignments_response.h",
+        "schemata/find_coordinator_request.h",
+        "schemata/find_coordinator_response.h",
+        "schemata/heartbeat_request.h",
+        "schemata/heartbeat_response.h",
+        "schemata/incremental_alter_configs_request.h",
+        "schemata/incremental_alter_configs_response.h",
+        "schemata/init_producer_id_request.h",
+        "schemata/init_producer_id_response.h",
+        "schemata/join_group_request.h",
+        "schemata/join_group_response.h",
+        "schemata/leave_group_request.h",
+        "schemata/leave_group_response.h",
+        "schemata/list_groups_request.h",
+        "schemata/list_groups_response.h",
+        "schemata/list_offset_request.h",
+        "schemata/list_offset_response.h",
         "schemata/list_partition_reassignments_request.h",
         "schemata/list_partition_reassignments_response.h",
-        "schemata/alter_client_quotas_request.h",
-        "schemata/alter_client_quotas_response.h",
-        "schemata/describe_client_quotas_request.h",
-        "schemata/describe_client_quotas_response.h",
+        "schemata/list_transactions_request.h",
+        "schemata/list_transactions_response.h",
+        "schemata/metadata_request.h",
+        "schemata/metadata_response.h",
+        "schemata/offset_commit_request.h",
+        "schemata/offset_commit_response.h",
+        "schemata/offset_delete_request.h",
+        "schemata/offset_delete_response.h",
+        "schemata/offset_fetch_request.h",
+        "schemata/offset_fetch_response.h",
+        "schemata/offset_for_leader_epoch_request.h",
+        "schemata/offset_for_leader_epoch_response.h",
+        "schemata/produce_request.h",
+        "schemata/produce_response.h",
+        "schemata/sasl_authenticate_request.h",
+        "schemata/sasl_authenticate_response.h",
+        "schemata/sasl_handshake_request.h",
+        "schemata/sasl_handshake_response.h",
+        "schemata/sync_group_request.h",
+        "schemata/sync_group_response.h",
+        "schemata/txn_offset_commit_request.h",
+        "schemata/txn_offset_commit_response.h",
+        "sync_group.h",
+        "timeout.h",
+        "txn_offset_commit.h",
+        "types.h",
+        "wire.h",
     ],
     include_prefix = "kafka/protocol",
     visibility = ["//visibility:public"],
     deps = [
         "//src/v/base",
         "//src/v/bytes",
-        "//src/v/utils",
-        "//src/v/ssx",
-        "//src/v/model",
-        "//src/v/storage:record_batch_builder",
         "//src/v/kafka:types",
+        "//src/v/model",
+        "//src/v/ssx",
+        "//src/v/storage:record_batch_builder",
+        "//src/v/utils",
         "@seastar//:libseastar",
     ],
 )
@@ -355,5 +355,5 @@ cc_library(
 # "flex_versions.h",
 # "flex_versions.cc",
 
-    #${message_hdrs}
-    #${msg_src}
+#${message_hdrs}
+#${msg_src}
