--- a/src/v/raft/BUILD
+++ b/src/v/raft/BUILD
@@ -12,9 +12,11 @@ cc_library(
     ],
 )
 
-rpc_gen("raftgen",
-    src="raftgen.json",
-    out="raftgen_service.h")
+rpc_gen(
+    "raftgen",
+    src = "raftgen.json",
+    out = "raftgen_service.h",
+)
 
 #genrule(
 #    name = "raftgen",
@@ -27,35 +29,35 @@ rpc_gen("raftgen",
 cc_library(
     name = "raft",
     srcs = [
+        "append_entries_buffer.cc",
+        "configuration_bootstrap_state.cc",
+        "configuration_manager.cc",
         "consensus.cc",
         "consensus_utils.cc",
-        "heartbeat_manager.cc",
-        "configuration_bootstrap_state.cc",
-        "logger.cc",
-        "types.cc",
-        "replicate_entries_stm.cc",
-        "vote_stm.cc",
-        "recovery_stm.cc",
-        "follower_stats.cc",
-        "replicate_batcher.cc",
-        "rpc_client_protocol.cc",
-        "group_manager.cc",
-        "probe.cc",
-        "offset_monitor.cc",
-        "event_manager.cc",
-        "state_machine.cc",
-        "configuration_manager.cc",
-        "group_configuration.cc",
-        "append_entries_buffer.cc",
-        "follower_queue.cc",
-        "recovery_memory_quota.cc",
         "coordinated_recovery_throttle.cc",
+        "event_manager.cc",
+        "follower_queue.cc",
+        "follower_stats.cc",
+        "group_configuration.cc",
+        "group_manager.cc",
+        "heartbeat_manager.cc",
         "heartbeats.cc",
-        "state_machine_manager.cc",
-        "state_machine_base.cc",
-        "recovery_scheduler.cc",
+        "logger.cc",
+        "offset_monitor.cc",
         "persisted_stm.cc",
+        "probe.cc",
+        "recovery_memory_quota.cc",
+        "recovery_scheduler.cc",
+        "recovery_stm.cc",
+        "replicate_batcher.cc",
+        "replicate_entries_stm.cc",
         "replication_monitor.cc",
+        "rpc_client_protocol.cc",
+        "state_machine.cc",
+        "state_machine_base.cc",
+        "state_machine_manager.cc",
+        "types.cc",
+        "vote_stm.cc",
     ],
     hdrs = [
         "append_entries_buffer.h",
@@ -81,6 +83,7 @@ cc_library(
         "offset_monitor.h",
         "persisted_stm.h",
         "probe.h",
+        "raftgen_service.h",
         "recovery_memory_quota.h",
         "recovery_scheduler.h",
         "recovery_stm.h",
@@ -97,15 +100,14 @@ cc_library(
         "transfer_leadership.h",
         "types.h",
         "vote_stm.h",
-        "raftgen_service.h",
     ],
     include_prefix = "raft",
     visibility = ["//visibility:public"],
     deps = [
-        "//src/v/rpc",
-        "//src/v/features",
-        "//src/v/storage",
         "//src/v/cluster:notification",
         "//src/v/cluster:snapshots",
+        "//src/v/features",
+        "//src/v/rpc",
+        "//src/v/storage",
     ],
 )
