--- a/src/v/kafka/client/BUILD
+++ b/src/v/kafka/client/BUILD
@@ -3,11 +3,12 @@ cc_library(
     srcs = [
     ],
     hdrs = [
+        "configuration.h",
         "fwd.h",
         "types.h",
     ],
     include_prefix = "kafka/client",
     visibility = ["//visibility:public"],
     deps = [
-    ]
+    ],
 )
