--- a/src/v/kafka/client/BUILD
+++ b/src/v/kafka/client/BUILD
@@ -6,9 +6,29 @@ cc_library(
         "configuration.h",
         "fwd.h",
         "types.h",
+        "client.h",
+        "assignment_plans.h",
+        "broker.h",
+        "brokers.h",
+        "client_fetch_batch_reader.h",
+        "config_utils.h",
+        "consumer.h",
+        "exceptions.h",
+        "fetch_session.h",
+        "fetcher.h",
+        "logger.h",
+        "partitioners.h",
+        "produce_batcher.h",
+        "produce_partition.h",
+        "producer.h",
+        "sasl_client.h",
+        "topic_cache.h",
+        "transport.h",
+        "utils.h",
     ],
     include_prefix = "kafka/client",
     visibility = ["//visibility:public"],
     deps = [
+        "//src/v/net",
     ],
 )
